--- a/engine_test_data/README
+++ b/engine_test_data/README
@@ -1,6 +1,6 @@
 ————————————————————————————————————————————————————————————————————————————————————————————————————————
  ***       各引擎测试数据    ****
  
-    结合./PhishingSpark/client_cmd文件中客户端指令使用
+    结合./Eggtart/client_cmd文件中客户端指令使用
     
 ————————————————————————————————————————————————————————————————————————————————————————————————————————
